service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-default-backend
  namespace: vk
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-default-backend
