all_manifests.yaml
#Deplyment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-default-backend
  namespace: vk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-default-backend
  template:
    metadata:
      labels:
        app: nginx-default-backend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config

---
#Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-default-backend
  namespace: vk
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-default-backend

---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: vk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-default-backend
            port:
              number: 80
